# jsonrpc-cli

./: Cargo.toml  Makefile  README
.github/workflows/: releaser.yml  rust.yml
src/: main.rs
tests/: integration_test.rs  serve.rs
